syntax = "proto3";

package greet;
option go_package = "foxygo.at/jig/pb/greet";
import "google/api/annotations.proto";

// Greeter service.
service Greeter {
  // Hello greets.
  rpc Hello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = { post:"/api/greet/hello" body:"*" };
  };
  // HelloClientStream greets everyone at once.
  rpc HelloClientStream (stream HelloRequest) returns (HelloResponse) {
    option (google.api.http) = { post:"/api/greet/clientstream" body:"*" };
  }
  // HelloServerStream greets repeatedly.
  rpc HelloServerStream (HelloRequest) returns (stream HelloResponse) {
    option (google.api.http) = { post:"/api/greet/serverstream" body:"*" };
  };
  // HelloBiDiStream greets everyone individually.
  rpc HelloBiDiStream (stream HelloRequest) returns (stream HelloResponse) {
    option (google.api.http) = { post:"/api/greet/bidistream" body:"*" };
  };
}

message HelloRequest {
  string first_name = 1;
}

message HelloResponse {
  string greeting = 1;
}
